First file updated to minimessage